--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
-  "devDependencies": {},
+  "devDependencies": {"@babel/plugin-proposal-private-property-in-object": "^7.14.5"},
   "author": "",
   "license": "ISC"
 }
